new proj/src/objects/GE_ES_Country_State_Sales_Region__c.object
<CustomObject>
    <description>Mapping of country state/provence and Sales region. This object used to populate the Sales Region
on Account based on the Account&apos;s Country and State/Provence</description>
    <fields>
        <fullName>GE_ES_CCT_Country__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field serves as a flag for checking Contract compliance</description>
        <label>CCT Country</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_ES_Country_Code__c</fullName>
        <description>Coutry ISO Code</description>
        <label>Country Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Country_Name__c</fullName>
        <description>Country Full Name</description>
        <label>Country Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Country_State__c</fullName>
        <formula>IF(ISBLANK(GE_ES_State_Provence__c) , UPPER( GE_ES_Country_Code__c) , UPPER( GE_ES_Country_Code__c&amp; &quot;_&quot; &amp; GE_ES_State_Provence__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GE_ES_Sales_Region_Name__c</fullName>
        <formula>GE_ES_Sales_Region__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Region Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Sales_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Region</label>
        <referenceTo>GE_ES_Sales_Region__c</referenceTo>
        <relationshipLabel>Country/State Sales Regions</relationshipLabel>
        <relationshipName>Country_State_Sales_Regions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_ES_State_Provence__c</fullName>
        <description>State provence code</description>
        <label>State/Provence</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Sub_Region_Name__c</fullName>
        <formula>GE_ES_Sub_Region__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub Region Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Sub_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub Region</label>
        <referenceTo>GE_ES_Sub_Region__c</referenceTo>
        <relationshipLabel>Country/State Sales Regions</relationshipLabel>
        <relationshipName>Country_State_Sales_Regions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_ES_eTax_Country__c</fullName>
        <defaultValue>false</defaultValue>
        <label>eTax Country</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_HQ_SFDC_LEGACY_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SFDC Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Country State Sales Region</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>GE_ES_Country_Code__c</columns>
        <columns>GE_ES_Country_Name__c</columns>
        <columns>GE_ES_Country_State__c</columns>
        <columns>GE_ES_Sales_Region__c</columns>
        <columns>GE_ES_State_Provence__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>GE_ES_Country_Name__c</columns>
        <columns>GE_ES_Country_State__c</columns>
        <columns>GE_ES_Sales_Region__c</columns>
        <columns>GE_ES_State_Provence__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>C-{0}</displayFormat>
        <label>Country State Region Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Country/State Sales Regions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>